--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,12 @@
         {% endblock %}
 
         {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+            {% block importmap %}{{ importmap() }}{% endblock %}
         {% endblock %}
     </head>
     <body>
+    <h1>{% block headline %}{% endblock headline %}</h1>
+    {% include 'flash-message.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
