--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+            <link rel="icon" type="image/png" href="{{asset('media/images/logo-16x16.png')}}">
             <link rel="stylesheet" href="{{ asset('css/base.css') }}">
         {% endblock %}
 
         {% block javascripts %}
-            {% block importmap %}{{ importmap() }}{% endblock %}
+            {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
     <body>
-    <h1>{% block headline %}{% endblock headline %}</h1>
-    {% include 'flash-message.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
